<resources>
    <string name="app_name">WeddingPlanner</string>
    <string name="please_sign">Please sign up to use all features of the app</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="title_activity_married_date">MarriedDate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="weddingdate">Wedding Date</string>
    <string name="budget">Budget</string>
    <string name="guest">Guest</string>

    <!--    String untuk button-->
    <string name="back_button">Back</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_joshua_clay">Joshua &amp; Clay</string>
    <string name="lbl_event">Event</string>
    <string name="msg_fitting_wedding">Fitting Wedding Dress</string>
    <string name="msg_your_current_bu">Your current budget</string>
    <string name="msg_until_our_weddi">Until Our Wedding</string>
    <string name="lbl_task_for_today">Task for today </string>
    <string name="msg_fitting_wedding2">Fitting wedding dress</string>
    <string name="lbl_10_000_000">$ 10.000.000</string>
    <string name="lbl_365_days">365 Days</string>
    <string name="lbl_26_juli_2023">26 Juli 2023</string>
    <string name="lbl_millia_azmi">Millia Azmi</string>
    <string name="lbl_cari_mua">Cari MUA</string>
    <string name="lbl_millia_s_tailor">Millia\u2019s Tailor</string>
    <string name="lbl_budget">Budget</string>
    <string name="lbl_view_more"> View more &gt;&gt;</string>
    <string name="lbl_view_all">View All</string>
    <string name="lbl_1_000_000">$ 1.000.000</string>
    <string name="lbl_to_do_list">To-do List</string>
    <string name="lbl_16_00_wib">16:00 WIB</string>
    <string name="lbl_9_000_000">$ 9.000.000</string>
    <string name="msg_graciel_hernand">Graciel Hernando</string>
    <string name="msg_bruno">Bruno Mars</string>
    <string name="msg_janedoe">Jane Doe</string>
    <string name="msg_eds">Ed Sheeran</string>
    <string name="msg_lee">Lee Taeyong</string>
    <string name="lbl_events">Events</string>
    <string name="lbl_12">12</string>
    <string name="lbl_days_left">Days left</string>
    <string name="lbl_time">Time</string>
    <string name="lbl_total_budget">Total Budget</string>
    <string name="msg_remaining_budge">Remaining Budget</string>
    <string name="lbl_upcoming_events">Upcoming Events</string>
    <string name="msg_design_kartu_un">Design kartu undangan</string>
    <string name="lbl_location">Location </string>
    <string name="lbl_guest_list">Guest List</string>
    <string name="lbl_baby_ayu_alicya">Baby Ayu Alicya</string>
    <string name="lbl">:</string>
    <string name="lbl_spent">Spent</string>
    <string name="msg_cari_gedung_per">Cari gedung pernikahan</string>
    <string name="invitation_"> Invitation Card </string>
    <string name="upload_your"> Upload Your Invitation Card </string>
    <string name="add_new"> Add new </string>
    <string name="title_activity_guest2">Guest2</string>
    <string name="add_guest"> Add Guest</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_guest3">Guest3</string>


</resources>
