<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Guest2">

    <LinearLayout
        android:id="@+id/linearColumnvector"
        style="@style/groupStylewhite_A700"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#FAF0E4">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="205dp"
                android:clickable="true"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical"
                android:onClick="back_button_click"
                android:src="@drawable/back_button" />

            <TextView
                android:id="@+id/budget"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|top"
                android:text="@string/guest"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:textAppearance="@style/textL" />

            <ImageView
                android:layout_width="322dp"
                android:layout_height="221dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="0dp"
                android:gravity="center_horizontal|bottom"
                android:src="@drawable/guestlogo" />

        </RelativeLayout>
        <!--            <FrameLayout-->
        <!--            android:id="@+id/frameStackjoshuaclay"-->
        <!--            style="@style/groupStyleorange_50"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="@dimen/_241pxv"-->
        <!--            android:layout_gravity="center_horizontal"-->
        <!--            android:layout_marginStart="@dimen/_1pxh">-->


        <FrameLayout
            android:id="@+id/frameStackyourcurrentbu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_marginBottom="@dimen/_92pxv">

            <LinearLayout
                android:id="@+id/linearColumnyourcurrentbu"
                style="@style/groupStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_22pxh"
                android:layout_marginEnd="@dimen/_20pxh"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/frame_2333"
                    android:layout_width="match_parent"
                    android:layout_height="182dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/invitation"
                    android:elevation="4dp">

                    <View
                        android:id="@+id/baseline"
                        android:layout_width="344dp"
                        android:layout_height="117dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="25dp"
                        android:alpha="0.4"
                        android:background="@drawable/baseline" />

                    <TextView
                        android:id="@+id/upload_your"
                        android:layout_width="323dp"
                        android:layout_marginTop="160dp"
                        android:layout_marginLeft="25dp"
                        android:layout_height="15dp"
                        android:gravity="center_horizontal|top"
                        android:text="@string/upload_your"
                        android:textAppearance="@style/upload_your" />

                    <TextView
                        android:id="@+id/invitation_"
                        android:layout_width="111dp"
                        android:layout_height="23dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="top"
                        android:text="@string/invitation_"
                        android:textAppearance="@style/invitation_" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linearColumnguestlistOne"
                    style="@style/groupStyleorange_50cornerRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="@dimen/_10pxh"
                    android:gravity="start"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearRowguestlistOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_3pxh"
                        android:orientation="horizontal"
                        android:gravity="start">

                        <TextView
                            android:id="@+id/txtGuestListOne"
                            style="@style/txtPoppinsbold15"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:textSize="16dp"
                            android:text="@string/lbl_guest_list" />

                        <TextView
                            android:id="@+id/txtLanguageOne1"
                            style="@style/txtPoppinsregular10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:textSize="16dp"
                            android:text="@string/lbl_view_more" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearRowellipsefortytwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_18pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageEllipseFortyTwo"
                            android:layout_width="@dimen/_45pxh"
                            android:layout_height="@dimen/_45pxh"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_ellipse42" />

                        <TextView
                            android:id="@+id/txtMilliaAzmi"
                            style="@style/txtPoppinsregular15"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12pxh"
                            android:layout_marginTop="@dimen/_10pxv"
                            android:layout_marginBottom="@dimen/_11pxv"
                            android:layout_weight="0.63"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:textSize="16dp"
                            android:text="@string/lbl_millia_azmi" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearRowellipsefortytwoOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageEllipseFortyTwoOne"

                            android:layout_width="@dimen/_45pxh"
                            android:layout_height="@dimen/_45pxh"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_ellipse42" />

                        <TextView
                            android:id="@+id/txtBabyAyuAlicya"
                            style="@style/txtPoppinsregular15"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12pxh"
                            android:layout_marginTop="@dimen/_12pxv"
                            android:layout_marginBottom="@dimen/_9pxv"
                            android:layout_weight="0.73"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:textSize="16dp"
                            android:text="@string/lbl_baby_ayu_alicya" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearRowellipsefortytwoTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:gravity="start"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtGracielHernand"
                        style="@style/txtPoppinsregular15"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_marginBottom="@dimen/_11pxv"
                        android:layout_weight="0.75"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/msg_graciel_hernand"
                        android:textSize="16dp" />

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>



    </LinearLayout>



</RelativeLayout>